--- a/app/html/index.html
+++ b/app/html/index.html
@@ -45,19 +45,17 @@
             </div>
         </div>
         <p class="header__subtitle subtitle subtitle--width subtitle--mb">Проходя тест вы экономите время нашим менеджерам и мы за это дарим вам подарок!</p>
-        <a class="header__button button button--width button--border button--active js-button" href="#" >
+        <button class="header__button button button--width button--border button--active js-button">
             <div class="button__wrap">
                 <div class="button__name">Начать расчет стоимости</div> 
-                <div class="button__wrap-img">
-                    <svg aria-hidden="true" class="button__img">
+                <svg aria-hidden="true" class="button__img">
                     <use xlink:href="#arrow"></use>
-                    </svg>
-                </div>
+                </svg>
             </div>
-        </a>
+        </button>
         <div class="header__form form header__form--active js-form">
-            <div class="from__wrap">
-                <button type="button" aria-label="close" class="burger header__burger js-burger burger--active">
+            <div class="form__wrap">
+                <button type="button" aria-label="close" class="burger form__burger js-burger burger--active">
                     <span class="burger__line"></span>
                     <span class="burger__line"></span>
                     <span class="burger__line"></span>
@@ -88,7 +86,7 @@
 </header>
 <section class="reviews">
     <div class="reviews__container container">
-        <div class="reviews__subtitle subtitle">Последние отзывы на компанию из рейтинга:</div>
+        <p class="reviews__subtitle subtitle">Последние отзывы на компанию из рейтинга:</p>
         <div class="reviews__row">
             <div class="reviews__item">
                 <div class="reviews__title">Отзыв о компании:</div>
@@ -188,7 +186,7 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <a href="#" class="footer__order">© 2022 Rerate. Все права защищены.</a>
+            <div class="footer__order">© 2022 Rerate. Все права защищены.</div>
             <a href="#" class="footer__privacy">Конфиденциальность</a>
             <a href="#" class="footer__conditions">
                 <span class="footer__circle"></span>
